enhance vehicle crud implementation, fixes bugs, applied the gaps implementation for android driver app
